--- a/trunk/roadmap/README
+++ b/trunk/roadmap/README
@@ -93,11 +93,13 @@ INSTALLATION
 
 * DEPENDENCIES
 
+   * GPS and gpsd
+
    RoadMap communicates with a GPS receiver using the NMEA 0183 protocol.
    RoadMap has been tested with a Garmin 38. The GPS receiver must be
    configured with the datum set to either NAD83 or WGS 84.
 
-   RoadMap communicates with the GPS receiver through gpsd, a GPS
+   RoadMap usually communicates with the GPS receiver through gpsd, a GPS
    communication daemon for UNIX. Therefore gpsd is required for RoadMap
    to take advantage of a GPS receiver. However gpsd is not required when
    building RoadMap, and RoadMap can run without gpsd as a static map viewer
@@ -107,44 +109,62 @@ INSTALLATION
    typical setup is to have gpsd on the same computer, in which case
    the GPS source should be set as "gpsd://localhost".
 
-   RoadMap uses either GTK, GTK2 or QT for its user interface. One of these
-   toolkits must be installed. RoadMap can be built for QT/QPE, but the
-   RoadMap makefile for QT must be modified.
+   * Desktop toolkit
 
-   RoadMap uses the "convert" program from the ImageMagick package to
-   generate the PNG files for some of the icons on its toolbar.  Pre-built
-   copies of these PNG files are distributed, so ImageMagick is optional,
-   and in any case is only required for building RoadMap, it is not
-   necessary when running RoadMap.
+   RoadMap usually uses one flavor or another of GTK or QT for its user
+   interface.  One of these toolkits must be installed.  RoadMap can be built
+   for QT/QPE, but the RoadMap makefile for QT must be modified.
 
-   RoadMap uses flite (festival lite) to generate voice messages. See
-   section "VOICE INTERFACE" for more information.
+   * Voice support
 
-   RoadMap uses aptconvert to format the documentation (see previous section).
+   RoadMap optionally uses flite (festival lite) to generate voice messages. 
+   See section "VOICE INTERFACE" for more information.
 
-   RoadMap can use the shapelib library (to decode the shape file format). 
-   The shape file format is only used for converting the Digital Charts of
-   the World.  If only US maps from the census bureau are used, or if only
-   pre-built maps are used, then there is no need for shapelib:  set
-   SHAPEFILES = NO in config.mk.
+   * Optional libraries
 
    RoadMap uses the expat library to load GPX trip and landmark files. 
    RoadMap can be built without expat, with some loss of functionality, by
    changing config.mk to say:  EXPAT = NO.  (On Debian or Ubuntu linux
    systems, use "apt-get install libexpat1-dev" to install the expat
-   development library.)
+   library.)
 
    Likewise, RoadMap can sometimes use the agg library to render anti-
-   aliased maps and street label text.  If you don't have agg, RoadMap
-   will label with a (relatively crude) built-in font.  To use agg:
-   AGG = YES.  RoadMap requires version 2.4 of the agg library -- 2.3 is
-   incompatible.  If your linux distribution includes 2.3, make sure that
-   if you install 2.4 as well, that RoadMap finds both headers and
-   libraries from 2.4.  Note:  currently (as of August, 2006) the
-   agg support is only aavailable if you're using the GTK2 build
-   of roadmap.  It also currently requires a 16bpp display.
+   aliased maps and street label text.  If you don't have agg, RoadMap will
+   label with a (relatively crude) built-in font.  To use agg:  AGG = YES. 
+   RoadMap requires version 2.4 of the agg library -- 2.3 is incompatible. 
+   If your linux distribution includes 2.3, make sure that if you install 2.4
+   as well, that RoadMap finds both headers and libraries from 2.4.  Note: 
+   currently (as of August, 2006) the agg support is only aavailable if
+   you're using the GTK2 build of roadmap.  (On Debian or Ubuntu linux
+   systems, use "apt-get install libagg-dev" to install the agg library.)
 
-* WINDOWS SPECIFIC DEPENDENCIES AND LIMITATIONS
+   The "buildmap" program uses the shapelib library to decode the "shapefile"
+   format).  Currently, most of the maps used by RoadMap are not in that
+   format, but some are: Canadian provinces, state boundaries, and the Digital
+   Charts of the World.  If only US maps from the census bureau are used,
+   or if only pre-built maps are used, then there is no need for shapelib: 
+   set SHAPEFILES = NO in config.mk.  (On Debian or Ubuntu linux systems, use
+   "apt-get install libshp-dev" to install the shapefile library.)
+
+   Likewise, the popt library is needed for building "buildmap".  It is not
+   needed for building or running RoadMap itself.  Set POPT = NO to prevent
+   buildmap (and buildus) from being built.  ("apt-get install libpopt-dev"
+   on Debian or Ubuntu.)
+
+   * Miscellaneous
+
+   RoadMap uses "aptconvert" to format the documentation (see previous
+   section) into HTML format.  Since this is an uncommon tool, a pre-converted
+   copy of manual.html is provided in the RoadMap tarball.
+
+   RoadMap can use the "convert" program from the ImageMagick package to
+   generate the PNG versions of some of the icons on its toolbar.  Pre-built
+   copies of these PNG files are distributed, so ImageMagick is optional,
+   and in any case is only required for building RoadMap, it is not
+   necessary when running RoadMap.
+
+
+* WINDOWS-SPECIFIC DEPENDENCIES AND LIMITATIONS
 
    The port of RoadMap on Windows is recent, not fully complete and has
    not been tested thoroughly, so problems are to be expected. Thank you
@@ -433,7 +453,7 @@ INSTALLATION
          * \Storage Card\roadmap\maps (preferred path)
 
 
-* DOWNLOADING
+* DOWNLOADING ROADMAP
 
    RoadMap can be downloaded from the RoadMap web site:
 
@@ -456,46 +476,25 @@ INSTALLATION
          * {{http://roadmap.digitalomaha.net/maps/usdir.rdm.tgz}}
 
    Please refrain from downloading all the US states at once, as the map
-   files are huges and the bandwidth is expensive. If you do need the
-   complete set, please drop an email to the author.
+   files are huge and the bandwidth is expensive.
    
    It is recommended to install the maps in one of the default directories
    (see previous section). You may also install the maps in any directory,
    assumed you set Map.Path accordingly in the RoadMap preferences.
 
-   Roadmap comes either as a set of sources, or as a set of binary files,
-   depending on which distribution you downloaded. RoadMap comes in three
-   distribution formats:
-
-      * a binary tarball with executables for Linux/i686.
-
-      * a set of .ipk packages for Linux/armv4l (Linux/Familiar).
-
-      * a source tarball.
-
-   The arm and i686 executables use the same map files. Please note that
-   the map files are dependent on the computer's endianess: map files
-   built on a Mac (PowerPC CPU) would not be compatible with an Intel or
-   (small endian) ARM computer.
-
-   Note: the main GTK RoadMap executables (roadmap and roadgps) are
-   built as "gtkroadmap" and "gtkroadgps", while the QT equivalent are
-   built as "qtroadmap" and "qtroadgps" to avoid a clash. These executables
-   are installed under their "standard" names using symbolic links, so
-   that only one version can be installed at a time (the reason is to
-   share one roadmap.menu file..).
-
-   A version of RoadMap for the Sharp Zaurus was available at
-   {{http://community.zaurus.com/projects/zroadmap/}}
-
+   Previously, RoadMap came either as a set of sources, or as a set of binary
+   files.  This is no longer the case -- it is not hard to build, and
+   there are choices to be made when building, so the source tarball
+   is all that is currently available.
 
 
 * INSTALLING FROM THE FAMILIAR PACKAGE
 
-   The RoadMap familiar distribution contains one .ipk package file. This
-   package contains the RoadMap executables (roadmap and roadgps) as well as
-   the configuration files for a GTK 2.0 setup (such as the Familiar 0.7.2 GPE
-   image). This package does not contain the map files or the map index file.
+   If available at all, the RoadMap familiar distribution contains one .ipk
+   package file.  This package contains the RoadMap executables (roadmap and
+   roadgps) as well as the configuration files for a GTK 2.0 setup (such as
+   the Familiar 0.7.2 GPE image).  This package does not contain the map files
+   or the map index file.
 
    If RoadMap is available from your feed:
 
@@ -567,9 +566,6 @@ INSTALLATION
    The complete list of options for building RoadMap is as follow.
    These can all be modified by editing config.mk.
 
-   [MODE=DEBUG|PROFILE] Compiles RoadMap in debug mode. The PROFILE option
-   also generates the necessary information and code for profiling.
-
    [DESKTOP=GTK2|GPE|GTK|QT|QPE|QT4|QPE4|WINCE] Compiles RoadMap for a specific GUI
    environment.  By default GTK, GTK2 and QT are built.  The GPE environment
    is a PDA variant of GTK2 and the QPE environment is a PDA variant of QT.
@@ -592,6 +588,9 @@ INSTALLATION
    [AGG=NO] Do not try to link roadmap with the agg library.  This optional
    library, currently supported for the GTK2 and Win32 desktops, can give
    much prettier (anti-aliased) lines and text.
+
+   [MODE=DEBUG|PROFILE] Compiles RoadMap in debug mode. The PROFILE option
+   also generates the necessary information and code for profiling.
 
 ----
 ----
